--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>App Name: A Coding Challenge</title>
+    <title>Mortgage Calculator: A Coding Challenge</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -36,7 +36,7 @@
           <a class="navbar-brand" href="/index.html"
             ><img
               src="img/Andy_Pham_White_Logo-removebg-preview-resize.png"
-              height="30" />&nbsp;App Name</a
+              height="30" />&nbsp;Mortgage Calculator</a
           >
           <button
             class="navbar-toggler"
@@ -81,7 +81,7 @@
     <main class="content container">
       <div class="row row-cols-1 row-cols-md-2 h-100 align-items-center">
         <div class="col mt-5 mt-md-0">
-          <h1 class="display-5">App Name: Coding Challenge</h1>
+          <h1 class="display-5">Mortgage Calculator: Coding Challenge</h1>
           <h4 class="lead">Your project description goes here</h4>
           <ul class="checkList">
             <li>
