--- a/code.html
+++ b/code.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>App Name: A Coding Challenge</title>
+    <title>Loan Shark: A Coding Challenge</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <!--Favicon-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/favicon_io/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicon_io/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -35,10 +52,8 @@
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
           <a class="navbar-brand" href="/index.html"
-            ><img
-              src="img/Andy_Pham_White_Logo-removebg-preview-resize.png"
-              height="30" />&nbsp;App Name</a
-          >
+            ><img src="img/LoanShark_WebLogo.png" height="50"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -54,24 +69,23 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Home</a
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/app.html">App</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/code.html"
+                  >Code</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/app.html">The App</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/code.html">The Code</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">The Repo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a
+                  class="nav-link"
+                  target="_blank"
+                  href="https://andyphamdev.netlify.app/"
+                  >Portfolio</a
+                >
               </li>
             </ul>
           </div>
@@ -80,19 +94,190 @@
     </header>
 
     <main class="content container">
-      <div class="row">
+      <div class="row pt-2">
         <h1 class="border-bottom border-2 border-dark">The Code</h1>
         <!--Code Editor-->
         <div class="col-12 col-lg-8">
           <pre class="line-numbers">
                     <code class="language-js">
-                        function displayMessage() {
+                        /// GET VALUES FROM USER?! ID?! HTML?!
+/// TERMS = MONTHS
+function getValues() {
+  let loanAmount = document.getElementById("loanA").value;
+  let loanTerm = document.getElementById("loanT").value;
+  let loanRate = document.getElementById("loanR").value;
 
-                        let msg = document.getElementById("message").value;
-                        alert(msg);
+  /// TURN INPUT / VALUES TO NUMBERS?!
+  loanAmount = Number(loanAmount);
+  loanTerm = parseInt(loanTerm);
+  loanRate = parseInt(loanRate);
+  loanRate = calcRate(loanRate);
 
-  
-                        }
+  /// CALCULATE PAYMENT?!
+  let paymentCost = calcPayment(loanAmount, loanRate, loanTerm);
+
+  /// RETURN PAYMENT LIST
+  let payments = getPayments(loanAmount, loanRate, loanTerm, paymentCost);
+
+  /// DISPLAY
+  displayData(payments, loanAmount, paymentCost);
+}
+
+//-----------------------------------------------
+
+/// CALCULATE PAYMENT FOR LOAN?!
+function calcPayment(amount, rate, term) {
+  return (amount * rate) / (1 - Math.pow(1 + rate, -term));
+}
+
+//-----------------------------------------------
+
+/// CALCULATE INTEREST OF CURRENT BALANCE
+function calcInterest(balance, rate) {
+  return balance * rate;
+}
+
+//-----------------------------------------------
+
+// Convert Rate to Monthly Interest Rate?!
+function calcRate(rate) {
+  return rate / 1200;
+}
+
+//-----------------------------------------------
+
+/// Calculated the Stuff First?!
+/// Setting Payments in Array?!
+/// Do Math?! Etc.?!
+
+function getPayments(amount, rate, term, monthlyPayment) {
+  let payments = [];
+  let balance = amount;
+  let totalInterest = 0;
+  let monthlyPrincipal = 0;
+  let monthlyInterest = 0;
+
+  /// Start; End; Increment?!
+  for (let month = 1; month <= term; month++) {
+    monthlyInterest = calcInterest(balance, rate);
+    totalInterest += monthlyInterest;
+    monthlyPrincipal = monthlyPayment - monthlyInterest;
+    balance = Math.abs(balance - monthlyPrincipal);
+
+    // Add Details of Table?! Data?! Etc.?!
+    // Object?! Properties / Property?! Etc.?!
+    let currentPayment = {
+      month: month,
+      monthlyPayment: monthlyPayment,
+      principal: monthlyPrincipal,
+      interest: monthlyInterest,
+      totalInterest: totalInterest,
+      balance: balance,
+    };
+
+    payments.push(currentPayment);
+  }
+
+  return payments;
+}
+
+//-----------------------------------------------
+
+// DISPLAY DATA?! TABLE / TABLE DATA?!
+function displayData(payments, loanAmount, payment) {
+  let tableBody = document.getElementById("tableBody");
+
+  let template = document.getElementById("tableTemplate");
+
+  // Clears Table of Previous Data?!
+  tableBody.innerHTML = "";
+
+  // Start; End; Incrementation?!
+  for (let index = 0; index < payments.length; index++) {
+    /// MY TABLE
+    let payRow = template.content.cloneNode(true);
+
+    let payCols = payRow.querySelectorAll("td");
+
+    // Table Month # Number?!
+    payCols[0].textContent = payments[index].month;
+
+    // Table Payment?!
+    payCols[1].textContent = payment.toLocaleString("en-us", {
+      style: "currency",
+      currency: "USD",
+    });
+
+    // Table Principal?!
+    payCols[2].textContent = payments[index].principal.toLocaleString("en-us", {
+      style: "currency",
+      currency: "USD",
+    });
+
+    // Table Interest?!
+    payCols[3].textContent = payments[index].interest.toLocaleString("en-us", {
+      style: "currency",
+      currency: "USD",
+    });
+
+    // Table Total Interest?!
+    payCols[4].textContent = payments[index].totalInterest.toLocaleString(
+      "en-us",
+      {
+        style: "currency",
+        currency: "USD",
+      }
+    );
+
+    // Table Balance?!
+    payCols[5].textContent = payments[index].balance.toLocaleString("en-us", {
+      style: "currency",
+      currency: "USD",
+    });
+
+    // Returns Node?! For Table?! Etc.?!
+    tableBody.appendChild(payRow);
+  }
+
+  // OVERALL DISPLAY AT TOP RIGHT OF PAGE?!
+
+  let totalInterestBold = payments[payments.length - 1].totalInterest;
+
+  /// Calculate Total Cost?!
+  let totalCostBold = Number(loanAmount) + totalInterestBold;
+
+  // Total Principal is Loan Amount
+  let totalPrincipalBold = Number(loanAmount);
+
+  // Display Total Principal Bold?!
+  let labelPrincipalBold = document.getElementById("totalPrincipalBold");
+  labelPrincipalBold.innerHTML = totalPrincipalBold.toLocaleString("en-US", {
+    style: "currency",
+    currency: "USD",
+  });
+
+  // Display Total Interest Bold?!
+  let labelInterest = document.getElementById("totalInterestBold");
+  labelInterest.innerHTML = Number(totalInterestBold).toLocaleString("en-US", {
+    style: "currency",
+    currency: "USD",
+  });
+
+  // Display Payment Bold?! "Your Monthly Payments:"?!
+  let labelPaymentBold = document.getElementById("paymentBold");
+  labelPaymentBold.innerHTML = Number(payment).toLocaleString("en-US", {
+    style: "currency",
+    currency: "USD",
+  });
+
+  // Display Total Cost Bold?!
+  let labelTotalCostBold = document.getElementById("totalCostBold");
+  labelTotalCostBold.innerHTML = Number(totalCostBold).toLocaleString("en-US", {
+    style: "currency",
+    currency: "USD",
+  });
+}
+
                     </code>
                 </pre>
         </div>
@@ -105,21 +290,25 @@
       </div>
     </main>
 
-    <footer class="footer container-fluid py-3">
-      <div class="container">
-        <div class="row row-cols-1 row-cols-lg-3 align-items-center">
-          <div class="col text-center text-lg-start">&copy;2022 Andy Pham</div>
-          <div class="col text-center">
-            <img
-              src="/img/Andy_Pham_White_Logo-removebg-preview-resize.png"
-              height="24" />
-          </div>
-          <div class="col text-center text-lg-end">
-            <a href="#"><i class="bi bi-linkedin socialIcons"></i></a>
-            <a href="#"><i class="bi bi-twitter socialIcons"></i></a>
-            <a href="#"><i class="bi bi-youtube socialIcons"></i></a>
-            <a href="#"><i class="bi bi-github socialIcons"></i></a>
-          </div>
+    <footer class="footer container-fluid py-3 mt-3">
+      <div class="row footer-main gy-2">
+        <div
+          class="col-12 col-md-4 text-center text-md-start order-last order-md-first pt-3">
+          &copy;2023 Andy Pham. All Rights Reserved.
+        </div>
+        <div class="col-12 col-md-4 text-center">
+          <img
+            src="/img/Andy_Pham_White_Logo-removebg-preview-resize.png"
+            height="50" />
+        </div>
+        <div
+          class="col-12 col-md-4 text-center text-md-end order-first order-md-2">
+          <a href="https://www.linkedin.com/in/andy-pham-56a68222a/"
+            ><i class="bi bi-linkedin p-2 socialIcons"></i
+          ></a>
+          <a href="https://github.com/andymonk8"
+            ><i class="bi bi-github p-2 socialIcons"></i
+          ></a>
         </div>
       </div>
     </footer>
