--- a/app.html
+++ b/app.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Mortgage Calculator: A Coding Challenge</title>
+    <title>Loan Shark: A Coding Challenge</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+      <!--Favicon-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/favicon_io/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicon_io/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <!-- Bootstrap CSS -->
     <link href="/css/bootstrap.css" rel="stylesheet" />
 
-    <!--Bootsratp Icons-->
+    <!--Bootstrap Icons-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
@@ -31,8 +48,8 @@
         <div class="container">
           <a class="navbar-brand" href="/index.html"
             ><img
-              src="img/Andy_Pham_White_Logo-removebg-preview-resize.png"
-              height="30" />&nbsp;Events</a
+              src="img/LoanShark_WebLogo.png"
+              height="50" /></a
           >
           <button
             class="navbar-toggler"
@@ -53,20 +70,14 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/app.html"
-                  >The App</a
+                  >App</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/code.html">The Code</a>
+                <a class="nav-link" href="/code.html">Code</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">The Repo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" target="_blank" href="https://andyphamdev.netlify.app/">Portfolio</a>
               </li>
             </ul>
           </div>
@@ -74,7 +85,7 @@
       </nav>
     </header>
 
-    <main class="content container mt-4">
+    <main class="content container mt-5">
       <div class="container mt-5">
         <div class="row">
           <div class="col">
@@ -138,7 +149,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row table-responsive">
           <div class="col">
             <table class="table table-hover table-striped">
               <thead id="tableheader" class="text-dark">
@@ -160,21 +171,25 @@
       </div>
     </main>
 
-    <footer class="footer container-fluid py-3">
-      <div class="container">
-        <div class="row row-cols-1 row-cols-lg-3 align-items-center">
-          <div class="col text-center text-lg-start">&copy;2022 Andy Pham</div>
-          <div class="col text-center">
-            <img
-              src="/img/Andy_Pham_White_Logo-removebg-preview-resize.png"
-              height="24" />
-          </div>
-          <div class="col text-center text-lg-end">
-            <a href="#"><i class="bi bi-linkedin socialIcons"></i></a>
-            <a href="#"><i class="bi bi-twitter socialIcons"></i></a>
-            <a href="#"><i class="bi bi-youtube socialIcons"></i></a>
-            <a href="#"><i class="bi bi-github socialIcons"></i></a>
-          </div>
+    <footer class="footer container-fluid py-3 mt-3">
+      <div class="row footer-main gy-2">
+        <div
+          class="col-12 col-md-4 text-center text-md-start order-last order-md-first pt-3">
+          &copy;2023 Andy Pham. All Rights Reserved.
+        </div>
+        <div class="col-12 col-md-4 text-center">
+          <img
+            src="/img/Andy_Pham_White_Logo-removebg-preview-resize.png"
+            height="50" />
+        </div>
+        <div
+          class="col-12 col-md-4 text-center text-md-end order-first order-md-2">
+          <a href="https://www.linkedin.com/in/andy-pham-56a68222a/"
+            ><i class="bi bi-linkedin p-2 socialIcons"></i
+          ></a>
+          <a href="https://github.com/andymonk8"
+            ><i class="bi bi-github p-2 socialIcons"></i
+          ></a>
         </div>
       </div>
     </footer>
