More Mobile Friendly?!

--- a/code.html
+++ b/code.html
@@ -93,8 +93,8 @@
       </nav>
     </header>
 
-    <main class="content container">
-      <div class="row pt-2">
+    <main class="content container pt-2">
+      <div class="row">
         <h1 class="border-bottom border-2 border-dark">The Code</h1>
         <!--Code Editor-->
         <div class="col-12 col-lg-8">
@@ -293,7 +293,7 @@ function displayData(payments, loanAmount, payment) {
     <footer class="footer container-fluid py-3 mt-3">
       <div class="row footer-main gy-2">
         <div
-          class="col-12 col-md-4 text-center text-md-start order-last order-md-first pt-3">
+          class="col-12 col-md-4 text-center text-md-start order-last order-md-first pt-0 pt-md-3">
           &copy;2023 Andy Pham. All Rights Reserved.
         </div>
         <div class="col-12 col-md-4 text-center">
