--- a/app.html
+++ b/app.html
@@ -88,7 +88,7 @@
     <main class="content container mt-5">
       <div class="container mt-5">
         <div class="row">
-          <div class="col">
+          <div class="col-12 col-md-6">
             <form>
               <div class="mb-1 fw-bold">
                 <label for="loanAmount" class="form-label">Loan Amount:</label>
@@ -123,7 +123,7 @@
               </button>
             </form>
           </div>
-          <div class="col">
+          <div class="col-12 col-md-6">
             <div id="paymentTitle">
               <p class="fw-bolder">Your Monthly Payments:</p>
             </div>
@@ -174,7 +174,7 @@
     <footer class="footer container-fluid py-3 mt-3">
       <div class="row footer-main gy-2">
         <div
-          class="col-12 col-md-4 text-center text-md-start order-last order-md-first pt-3">
+          class="col-12 col-md-4 text-center text-md-start order-last order-md-first pt-0 pt-md-3">
           &copy;2023 Andy Pham. All Rights Reserved.
         </div>
         <div class="col-12 col-md-4 text-center">
