Code Docs Section Commented?!

--- a/code.html
+++ b/code.html
@@ -283,9 +283,19 @@ function displayData(payments, loanAmount, payment) {
         </div>
         <!-- Code Docs-->
         <div class="col-12 col-lg-4">
-          <p>The code is structured in one function</p>
-          <h5>displayMessage</h5>
-          <p>Prints out the message</p>
+          <!-- <p>The code is structured in six functions:</p>
+          <h5>getValues</h5>
+          <p>Get values from the user</p>
+          <h5>calcPayment</h5>
+          <p>Calculate payment for loan</p>
+          <h5>calcInterest</h5>
+          <p>Calculate interest of current balance</p>
+          <h5>calcRate</h5>
+          <p>Convert rate to monthly interest rate</p>
+          <h5>getPayments</h5>
+          <p>Returns payment list</p>
+          <h5>displayData</h5>
+          <p>Displays the data on the table</p> -->
         </div>
       </div>
     </main>
